--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>OBIANUJU PORTFOLIO</title>
+    <link rel="stylesheet" href="/style.css" />
   </head>
   <body>
     <!--navigation section starts here-->
@@ -11,35 +12,37 @@
       <!--navigation links-->
       <ul>
         <li>
-          <a href="/home.html" target="_blank">home</a>
+          <a href="/home.html" target="_blank">Home</a>
         </li>
         <li>
           <a href="/about.html" target="_blank">About</a>
         </li>
         <li>
-          <a href="/work.html" target="_blank">work</a>
+          <a href="/work.html" target="_blank">Work</a>
         </li>
         <li>
-          <a href="/resume.html" target="_blank">resume</a>
+          <a href="/resume.html" target="_blank">Resume</a>
         </li>
         <li>
-          <a href="/contact.html" target="_blank">contact</a>
+          <a href="/contact.html" target="_blank">Contact</a>
         </li>
       </ul>
     </nav>
     <!--navigation section ends here-->
     <!--hero section-->
-    <div>
-      <h3><b>Lady Onuigwe Obianuju</b></h3>
+    <div class="box-one">
+      <h3 class="first-heading"><b>LADY ONUIGWE OBIANUJU</b></h3>
       <p>The future of software programming!!!..</p>
       <!--using local images-->
+
       <img src="/Image 2.jpg" alt="lady obianuju " width="500" height="600" />
+
       <p><i>A rare photo of lady onuigwe obianuju..</i></p>
     </div>
     <!--hero section ends here-->
     <!--footer section-->
     <footer>
-      <p>Copy right @ Obianuju portfolio 2025</p>
+      <p><i>Copy right @ Obianuju portfolio 2025</i></p>
       <!--social links-->
       <div>
         <a href="https://facebook.com">
